fix styling errors and mobile devices

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Chris + Tiff | 2018</title>
+    <title>Chris & Tiff | 2018</title>
+    <meta property="og:title" content="Chris & Tiff | 2018" />
+    <meta property="og:image" content="" />
   </head>
   <body>
     <noscript>
