--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Chris & Tiff | 2018</title>
     <meta property="og:title" content="Chris & Tiff | 2018" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="https://image.ibb.co/fdgKB8/Chris_Tiffany85.jpg" />
   </head>
   <body>
     <noscript>
