replace images again, adjust sizing of images and more misc time fixes

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Chris & Tiff | 2018</title>
-    <meta property="og:title" content="Chris & Tiff | 2018" />
-    <meta property="og:image" content="https://image.ibb.co/fdgKB8/Chris_Tiffany85.jpg" />
+    <title>Christopher & Tiffany | December 2018</title>
+    <meta property="og:title" content="Christopher & Tiffany | 2018" />
+    <meta property="og:image" content="https://image.ibb.co/dAcJPT/Chris_Tiffany85.jpg" />
   </head>
   <body>
     <noscript>
